deploy/stack/envoy-forward-proxy.yaml
admin:
  access_log_path: /tmp/envoy-admin-access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - name: sandbox_egress_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 3128
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: sandbox_egress
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: sandbox_egress
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: dynamic_forward_proxy_cluster
                http_filters:
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: sandbox_egress_dns_cache
                        dns_lookup_family: V4_ONLY
                        dns_cache_circuit_breaker:
                          max_pending_requests: 1024
                        typed_dns_resolver_config:
                          name: envoy.network.dns_resolver.cares
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                            resolvers:
                              - socket_address:
                                  address: 8.8.8.8
                                  port_value: 53
                            dns_resolver_options:
                              use_tcp_for_dns_lookups: true
                              no_default_search_domain: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/egress-audit.jsonl
                      typed_json_format:
                        response_code: "%RESPONSE_CODE%"
                        host: "%REQ(:AUTHORITY)%"
                        workspace_id: "%REQ(X-ORCHEO-WORKSPACE)%"
                        sandbox_id: "%REQ(X-ORCHEO-SANDBOX-ID)%"
                        run_id: "%REQ(X-ORCHEO-RUN-ID)%"

  clusters:
    - name: dynamic_forward_proxy_cluster
      lb_policy: CLUSTER_PROVIDED
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1024
            max_pending_requests: 1024
            max_requests: 1024
            max_retries: 3
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          dns_cache_config:
            name: sandbox_egress_dns_cache
            dns_lookup_family: V4_ONLY
            dns_cache_circuit_breaker:
              max_pending_requests: 1024
            typed_dns_resolver_config:
              name: envoy.network.dns_resolver.cares
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                resolvers:
                  - socket_address:
                      address: 8.8.8.8
                      port_value: 53
                dns_resolver_options:
                  use_tcp_for_dns_lookups: true
                  no_default_search_domain: true
